# baxter-playground

./: .gitignore  README.md  app.py  baxter.py  baxter_arm.py  baxter_gripper.py  robot_utils.py  test.py  waypoint_buddy.py
baxter_libs/: baxter.py  baxter_arm.py  baxter_button.py  baxter_head.py  baxter_sonar_array.py  robot_utils.py
baxter_libs/baxter_neglected_msgs/: CMakeLists.txt  package.xml
baxter_libs/baxter_neglected_msgs/msg/: Header.msg  PointCloud.msg
functional_tests/: arms.py  grippers.py  head.py  sonars.py  waypoint_buddy.py
ros_tools/: async_node_publisher.py
